Cleanup: prefer unmodifiable collections, and several toList stragglers
* Change collectors to use unmodifiable Set, Map, etc. where appropriate
* Fix a few stragglers to use toList instead of collect(toList())